Derision: AA reuse timers should now display correctly with hotkeys remaining depressed when appropriate.
KLS: Code block for pets getting sent into attack did not verify that other was not null, causing rare crashes the old way and a pretty common crash with it's new positioning.  This has been corrected.
KLS: Added area rampage 'r' npc special attak code.
	REQUIRED SQL: utils/sql/svn/463_altadv_vars.sql
Congdar: Bots - Added Rogue Triple Backstab AA, Enhanced #bot list, Fixed beneficial weapon procs to not effect the entire group.

==05/03/2009==
KLS: Some optimizations for the aggro code.  Added a timer for aggro checking will do it twice a second by default: lower AItarget_check_duration in features.h if aggro feels too sluggish for your tastes and recompile.
Derision: Increased reuse_time in AA_DBAction to a uint32 to support reuse timers greater than 18 hours.
Derision: Code support for Chaotic Jester Veteran AA.
Congdar: Bots - Improve Cleric healing ai, fix ae break, update attack code.
Congdar: Bots - Fix sql error for bot table
KLS: (Secrets) min/max damage updated to int32
KLS: Fixed a bug with accuracy tweaks and finished them up.  The system should work fairly well now.
KLS: Removal of several rules associated with the dual accuracy system and the old system for defensive and offensive accuracy bonus.
KLS: Some warning fixes on MSVS.
KLS: Fixed pets not getting sent into battle on attack.
KLS: (theblaz) Pets who were previously guarding after a pet attack command will return to their guard spot; though it appears a stop moving packet is missing on the pet guard spot waypoint.
KLS: Rampage will no longer hit the main tank unless the main tank is the only target in range.
KLS: Swarm pets will once again disappear when their target dies.
KLS: Added zone zone profiling stuff.

==05/02/2009==
realityincarnate: Augment Item Info.
realityincarnate: Show helm option will now save on camping/zoning.
Derision: Corrected a few memory leaks.